package baseline;

public class ProductList
{
    Product[] products;
    public ProductList(Product[] products)
    {
        this.products = products;
    }
}