@startuml
'https://plantuml.com/class-diagram

class Solution44
{
    -Scanner reader
    Product[] products

    main()
    -loopProductSearch()
}
class Product
{
    String name;
    double price;
    int quantity;
}
class ProductList
{
    ProductList(Product[] products)
}
class ProductSearcher
{
    +searchProducts()
    +matchProduct()
    -printProduct()
}
Solution44 <|-- ProductSearcher
Solution44 <|-- ProductList
ProductList <|-- Product
@enduml